tests/src/frontend/typechecking/invalid/call_global_constant.sk
const foo: String = "foo";

fun no(): String {
  foo()
}
